--- a/assets/scss/admin/components/_form.scss
+++ b/assets/scss/admin/components/_form.scss
@@ -2,3 +2,22 @@
     font-size: 1rem;
     max-width: unset;
 }
+
+body {
+    .select2-container {
+        z-index: 999999;
+        .select2-selection--single {
+            height: 34px;
+            .select2-selection__rendered {
+                line-height: 34px;
+            }
+            .select2-selection__arrow {
+                height: 32px;
+            }
+        }
+    }
+    
+    .select2 {
+        display: block;
+    }
+}
